# rust-ticker-sniffer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  embed.rs  text.txt
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: my_benchmark.rs
bin_utils/: suppress_output.rs
data/: README.md  company_symbol_list.csv  company_symbol_list.small..csv
dev/: Cargo.toml  README.md
dev/src/: TODO  main.rs
dev_shared/: README.md  constants.rs
docker/wasm-test/: Dockerfile
examples/: prototype.rs  simple.rs
shared/: README.md  constants.rs
shared/src/: constants.rs
src/: config.rs  constants.rs  dynamic_resources.rs  dynamic_resources_generated.rs  lib.rs  main.rs  models.rs  structs.rs  types.rs  utils.rs
src/models/: company_name_token_rating.rs  company_token_mapper.rs  company_token_processor.rs  company_token_processor_ng.rs  config.rs  context_attention.rs  document_company_name_extractor.rs  document_entity_extractor.rs  document_ticker_symbol_extractor.rs  error.rs  old.company_name_token_rating.rs  old.company_token_processor.rs  old.document_company_name_extractor.rs  old.result_bias_adjuster.rs  result_bias_adjuster.rs  ticker_extractor.rs  ticker_symbol_mapper.rs  token_mapper.rs  token_parity_state.rs  token_processor.rs  token_range_state.rs  tokenizer.rs  weights.rs
src/structs/: company_symbol_list_preprocessor.rs  company_token_mapper.rs  company_token_processor.rs  error.rs  resource_container.rs  token_mapper.rs  token_parity_state.rs  token_range_state.rs  tokenizer.rs
src/utils/: cosine_similarity.rs  count_ticker_symbol_frequencies.rs  dedup_vector.rs  generate_alternative_symbols.rs  get_company_token_sequence_max_length.rs  get_ticker_symbol_by_token_id.rs  get_ticker_symbol_token_id.rs  index_difference_similarity.rs  jaccard_similarity_chars.rs  old.cosine_similarity.rs  old.index_difference_similarity.rs  old.pad_vector.rs  pad_vector.rs  softmax.rs  sort_results.rs  tokenize.rs
test_utils/: Cargo.toml  constants.rs  lib.rs  models.rs
test_utils/models/: evaluation_result.rs  evaluation_results.rs
test_utils/src/: constants.rs  lib.rs
tests/: extract_tickers_tests.rs  test_runner_validation.rs  test_symbols.csv  test_symbols.csv.new  test_ticker_extraction.rs  test_utils.rs  tokenizer_tests.rs
tests/pending_test_files/: proto.txt  test_file_8.txt  test_ignores_spdr.txt  test_news_company_names.txt  test_with_hyphen_in_name_2.txt
tests/pending_test_files_a/: test_file_10.txt  test_file_6.txt  test_no_exact_company_match.txt
tests/test_data_files/: test_symbols.csv  test_symbols_amzn.csv
tests/test_files/: proto.txt  test_company_name_with_stop_word_first_word.txt  test_file_1.txt  test_file_10.txt  test_file_2.txt  test_file_3.txt  test_file_4.txt  test_file_5.txt  test_file_6.txt  test_file_7.txt  test_file_8.txt  test_file_9.txt  test_file_fail_1.txt  test_file_fail_2.txt  test_file_fail_3.txt  test_full_caps.txt  test_ignores_spdr.txt  test_long_name_match.txt  test_lowercase_phrasing.txt  test_lowercase_symbol_extraction.txt  test_mixed_names.txt  test_news_company_names.txt  test_no_dow_false_positive.txt  test_no_exact_company_match.txt  test_non_false_positive_stop_words_1.txt  test_non_false_positive_stop_words_2.txt  test_non_spaced_csv_symbols.txt  test_numeric_company_names.txt  test_single_match.txt  (+3 more)
ticker-sniffer/: Cargo.toml  build.rs  source.txt
ticker-sniffer-build-utils/: Cargo.toml
ticker-sniffer-common-lib/: Cargo.toml  README.md
ticker-sniffer/benches/: my_benchmark.rs
ticker-sniffer/src/: lib.rs  main.rs  models.rs  utils.rs
ticker-sniffer/src/models/: company_token_mapper.rs  company_token_processor.rs  token_mapper.rs  token_parity_state.rs  token_range_state.rs
ticker-sniffer/src/utils/: count_ticker_symbol_frequencies.rs  read_company_symbol_list.rs
ticker-sniffer/test_utils/: constants.rs  lib.rs
ticker-sniffer/tests/: TODO--RE-ENABLE.old.tokenizer_tests.rs.PROTO  old.test_runner_validation.rs.PROTO  old.tokenizer_tests.rs.PROTO  test_runner_validation.rs  test_ticker_extraction.rs  tokenizer_tests.rs
ticker-sniffer/tests/pending_test_files/: test_file_11.txt
ticker-sniffer/tests/test_files/: test_apple_inc.txt  test_file_3.txt  test_file_8.txt  test_file_9.txt  test_words_which_make_up_partial_stop_words.txt
ticker-sniffer/tests/test_runner_validation_files/: test_file_fail_2.txt  test_file_fail_3.txt
ticker_sniffer/: Cargo.toml  source.txt
ticker_sniffer/bin_utils/: lib.rs
ticker_sniffer/src/: lib.rs
ticker_sniffer/tests/test_files/: test_company_that_is_also_a_domain.txt  test_file_10.txt  test_file_2.txt  test_file_7.txt  test_stop_words_symbols.txt  test_with_possessive_2.txt
(+17 files in other folders)
