[package]
name = "ticker-sniffer"
version = "0.1.0-alpha"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A library for extracting multiple stock ticker symbols from a text document."
repository = "https://github.com/jzombie/rust-ticker-sniffer"
license = "MIT"
include = ["data/company_symbol_list.csv", "README.md", "LICENSE", "__AUTOGEN__*.*", "src/**/*"]

[dependencies]
log = "0.4.22"
env_logger = {version = "0.11.6", optional = true}
csv = "1.3.1"
flate2 = "1.0.35"

[build-dependencies]
flate2 = "1.0.35"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "proto_n_gram"
path = "src/bin/proto_n_gram.rs"
required-features = ["logger-support"]

[[bin]]
name = "ticker-sniffer-cli"
path = "src/main.rs"
required-features = ["logger-support"]

[features]
default = []
logger-support = ["dep:env_logger"]
