[package]
name = "ticker-sniffer"
version = "0.1.0-alpha.1m"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A Rust crate for extracting multiple stock ticker symbols from a text document."
repository = "https://github.com/jzombie/rust-ticker-sniffer"
license = "MIT"
include = ["data/company_symbol_list.csv", "README.md", "LICENSE", "embed.rs", "embed/*", "src/**/*"]

[dependencies]
log = "0.4.22"
env_logger = { version = "0.11.6", optional = true }
csv = "1.3.1"
flate2 = "1.0.35"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
test_utils = { path = "test_utils" }

[build-dependencies]
embed-resources = "=0.1.0-alpha3"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "ticker-sniffer-cli"
path = "src/main.rs"

[features]
logger-support = ["dep:env_logger"]

[workspace]
members = [
    ".",
    "dev",
    "test_utils"
]
