[package]
name = "ticker-sniffer"
version = "0.1.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A library for extracting multiple stock ticker symbols from a text document."
license = "MIT"

[dependencies]
csv = "1.3.1"
log = "0.4.22"
env_logger = {version = "0.11.6", optional = true}
flate2 = "1.0.35"
ticker-sniffer-common-lib = { path = "../ticker-sniffer-common-lib" }

[build-dependencies]
ticker-sniffer-build-utils = { path = "../ticker-sniffer-build-utils" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "proto_n_gram"
path = "src/bin/proto_n_gram.rs"
required-features = ["logger-support"]

[features]
default = []
logger-support = ["dep:env_logger"]
