[package]
name = "ticker_sniffer"
version = "0.1.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A library for extracting multiple stock ticker symbols from a text document."
license = "MIT"

[dependencies]
log = "0.4.22"
env_logger = {version = "0.11.6", optional = true}
csv = { version = "1.3.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "proto_n_gram"
path = "src/bin/proto_n_gram.rs"
required-features = ["csv-support", "logger-support"]

[features]
default = []
csv-support = ["dep:csv"]
logger-support = ["dep:env_logger"]
